library/k8shttpsonly/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8shttpsonly
spec:
  crd:
    spec:
      names:
        kind: K8sHttpsOnly
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |-
        package k8shttpsonly

        violation[{"msg": msg}] {
        	ingress := input.review.object
        	not https_complete(ingress)
        	msg := "Ingress must be https, TLS configuration is required"
        }

        https_complete(ingress) {
        	ingress.spec.tls
        	count(ingress.spec.tls) > 0
        }
